Fix code samples not wrapping.

--- a/jekyll/_sass/_docs.scss
+++ b/jekyll/_sass/_docs.scss
@@ -21,7 +21,7 @@ html, body {
 
 /* Header and Nav */
 
-.container-fluid > .row > .navbar { // Ensure this doesn't conflict with any examples
+.container-fluid > .row > .navbar { // Ensure this doesn't conflict with any examples that use .navbar
   margin-bottom: 0;
 
   a {
@@ -69,7 +69,6 @@ html, body {
   }
 
   @media (min-width: $screen-sm-min) {
-    //flex: 1;
     max-width: 300px;
     overflow-y: auto;
     position: fixed;
@@ -86,7 +85,6 @@ html, body {
   padding-bottom: 300px;
 
   @media (min-width: $screen-sm-min) {
-    //flex: 3;
     overflow-y: auto;
 
     > .wrapper {
@@ -129,10 +127,6 @@ html, body {
     font-size: 16px;
     font-weight: 300;
     line-height: 24px;
-  }
-
-  code {
-    white-space: nowrap;
   }
 }
 
